--- a/templates/recepcion/registrar.html
+++ b/templates/recepcion/registrar.html
@@ -49,12 +49,32 @@
         {% endif %}
       </div>
     </div>
-    
-    <div class="mt-3 text-center">
-      <a href="{% url 'listado_equipos' %}" class="btn btn-outline-secondary">
-        <i class="bi bi-list-ul me-1"></i>Ver Listado de Equipos
-      </a>
-    </div>
+      <div class="row mt-4">
+        <div class="col-md-6">
+          <div class="card">
+            <div class="card-body text-center">
+              <h5 class="card-title">
+                <i class="bi bi-list-ul me-2"></i>Ver Equipos
+              </h5>
+              <a href="{% url 'listado_equipos' %}" class="btn btn-outline-primary">
+                Ver Listado Completo
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="card">
+            <div class="card-body text-center">
+              <h5 class="card-title">
+                <i class="bi bi-tools me-2"></i>Diagnosticar
+              </h5>
+              <a href="{% url 'asignar_diagnostico' %}" class="btn btn-success">
+                Ir a Diagnóstico
+              </a>
+            </div>
+          </div>
+        </div>
+      </div> 
   </div>
 </div>
 {% endblock %}
