creación app entrega

--- a/templates/diagnostico/listado.html
+++ b/templates/diagnostico/listado.html
@@ -17,6 +17,9 @@
   <a href="{% url 'evaluar_diagnostico' %}" class="btn btn-info">
     <i class="bi bi-clipboard-check me-1"></i>Evaluar Diagnóstico
   </a>
+  <a href="{% url 'verificar_estado' %}" class="btn btn-secondary">
+    <i class="bi bi-plus-circle me-1"></i>Verificar Estado de Equipo
+  </a>
 </div>
 {% endblock %}
 
