--- a/templates/recepcion/listado.html
+++ b/templates/recepcion/listado.html
@@ -67,7 +67,7 @@
       </div>
       <div class="card-body text-center">
         <p class="card-text">¿Deseas diagnosticar los equipos recibidos?</p>
-        <a href="{% url 'asignar_diagnostico' %}" class="btn btn-success btn-lg">
+        <a href="{% url 'asignar_diagnostico' %}" class="btn btn-outline-success btn-lg">
           <i class="bi bi-tools me-2"></i>Ir a Diagnóstico de Equipos
         </a>
       </div>
