--- a/templates/recepcion/registrar.html
+++ b/templates/recepcion/registrar.html
@@ -68,7 +68,7 @@
               <h5 class="card-title">
                 <i class="bi bi-tools me-2"></i>Diagnosticar
               </h5>
-              <a href="{% url 'asignar_diagnostico' %}" class="btn btn-success">
+              <a href="{% url 'asignar_diagnostico' %}" class="btn btn-outline-success">
                 Ir a Diagnóstico
               </a>
             </div>
